--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -40,17 +40,6 @@ b {
     }
 }
 
-// li {
-//     @media only screen and (min-width: 768px) {
-//         cursor: pointer;
-//         border: 0;
-//         border-bottom: .2rem solid transparent;
-//         &:hover {
-//             border-color: gray; 
-//         }
-//     }
-// }
-
 hr {
     width: 80%;
     background-color: rgba(151, 151, 151, 0.2);
@@ -88,10 +77,6 @@ hr {
 .d-active {
     border-color: white;
     pointer-events: none;
-}
-
-.c-active {
-    background-color: #fff;
 }
 
 .active {
